feat: CS 기초 시리즈 전체 재작성 - 백엔드 개발자 관점 강화
backend-cs-fundamentals 시리즈의 모든 글을 백엔드 개발자의 실무 경험과
관점에서 전면 재작성했습니다. 이론 중심에서 실전 중심으로 전환하여
강의 및 커리어 발전을 위한 시그니처 컨텐츠로 개선했습니다.

주요 개선 사항:
- 실제 프로덕션 문제 사례로 각 글 시작 (신입 시절 겪은 문제들)
- Spring Boot, Tomcat, MySQL 등 실무 기술 스택 예제로 교체
- 코드 예제에 @Transactional, application.yml, JVM 플래그 등 포함
- 모니터링 도구 사용법 추가 (VisualVM, jstack, vmstat, jmap)
- 측정 가능한 지표와 성능 데이터 포함 (응답시간, 스레드 수, CPU 사용률)
- "실무에서 겪은 문제" 섹션으로 해결 과정 상세 설명

수정된 파일:
1. process-and-thread.md (265줄)
   - Tomcat 스레드 풀, Race Condition 버그, 스레드 고갈 문제
   - AtomicInteger 해결법, VisualVM 모니터링, HikariCP 설정

2. process-scheduling.md (298줄)
   - API 서버 응답 시간 문제, 파일 업로드 Convoy Effect
   - CPU/IO 바운드 작업별 스레드 풀 크기 결정, 스케줄링 알고리즘

3. context-switching.md (280줄)
   - 스레드 500개→200개 최적화로 응답시간 절반 개선
   - vmstat 모니터링, 캐시 미스 분석, CPU 바운드 작업 분리

4. stack-and-heap.md (346줄)
   - OutOfMemoryError 해결 사례, 힙 덤프 분석
   - JVM 메모리 튜닝, GC 알고리즘 선택, 메모리 누수 디버깅

5. db-transaction-acid-isolation.md (389줄)
   - 재고 마이너스 동시성 버그, @Transactional 격리 수준
   - 비관적/낙관적 락, 데드락 해결, 긴 트랜잭션 최적화

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>